--- a/pages/d_linguistics.html
+++ b/pages/d_linguistics.html
@@ -39,7 +39,7 @@
     <nav id="mainav" class="clear">
       <!-- ################################################################################################ -->
       <ul class="clear">
-        <li><a href="../About.html">ABOUT US</a></li>
+        <li><a href="../index.html">ABOUT US</a></li>
 
         <li><a href="Adiminstration.html">ADMISSION</a></li>
 
